...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="new todo -item" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sRK-qV-0oj">
                                <rect key="frame" x="20" y="101" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="newTodoName">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XNz-5O-ztO">
                                <rect key="frame" x="282" y="131" width="37" height="154"/>
                                <accessibility key="accessibilityConfiguration" identifier="doneID" label="done"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <segue destination="Ckd-LV-YJr" kind="unwind" unwindAction="unwindToList:" id="yUj-Ol-WBB"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ey-0W-IX6">
                                <rect key="frame" x="276" y="285" width="48" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="cancelID" label="cancel"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <segue destination="Ckd-LV-YJr" kind="unwind" unwindAction="unwindToList:" id="xDS-zU-7Su"/>
                                </connections>
                            </button>
                        </subviews>
...
